syntax = "proto3";

package v1;

service Survival {
    rpc CreateTask (CreateTaskRequest) returns (TaskResponse);
    rpc GetTasks (GetTasksRequest) returns (stream TaskResponse);
}

message CreateTaskRequest {
    string title = 1;
}

message GetTasksRequest {
}

message TaskResponse {
    int32 id = 1;
    string title = 2;
}
